@@ -39,6 +39,9 @@ port=1234
 # The name of the playlistgroup your announce will be part of in the VLC playlist
 playlist_group=organisationTV 
 
+# igmp3/SSM RFC 4750 - announcement
+#igmpv3=yes
+
 # If you wish to send custom SDP to clients, specify the full path to the
 # SDP file
 #customsdp=/path/to/broadcast.sdp
