@@ -1,3 +1,6 @@
+* Support for a=source-filter: incl IN IP4 <multicast_ip> <unicast_ip>
+  (set igmpv3=yes in sap.cfg to enable it)
+
 -- Changes from version 0.3.7 to version 0.3.8
 
 * Support for the a=cat category SDP attribute.
